# marvik

./: .flake8  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  prestart.sh  pyproject.toml
app/: main.py  models.py
app/alembic/: env.py
app/alembic/versions/: f490915e9a4b_init.py
app/api/: deps.py  permissions.py
app/api/routes/: login.py  users.py
app/core/: config.py  db.py
app/enums/: user_level.py
app/repositories/: base.py  user_repository.py
app/services/: auth_service.py  user_service.py
app/utils/: security.py
