[tool.poetry]
name = "marvik"
version = "0.1.0"
description = ""
authors = ["kevinfcc26 <kevinfcc26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
tenacity = "^8.3.0"
pydantic = "^2.7.1"
emails = "^0.6"
gunicorn = "^22.0.0"
alembic = "^1.13.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
sqlmodel = "^0.0.18"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
types-passlib = "^1.7.7.20240327"
coverage = "^7.5.3"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
